--- a/banner.html
+++ b/banner.html
@@ -111,6 +111,7 @@
     <div class="wrap">
         <ul>
             <li><img src="img/1.jpg" alt="" /></li>
+            <li><img src="img/1.jpg" alt="" /></li>
             <li><img src="img/2.jpg" alt="" /></li>
             <li><img src="img/3.jpg" alt="" /></li>
             <li><img src="img/4.jpg" alt="" /></li>
