--- a/banner/banner.html
+++ b/banner/banner.html
@@ -6,8 +6,8 @@
     <style type="text/css">
         *{margin: 0;padding: 0;}
         .wrap{
-            height:378px;
-            width:640px;
+            height:320px;
+            width:810px;
             overflow:hidden;
             position:relative;
         }
@@ -27,7 +27,7 @@
         .wrap .right{display:none;position:absolute;right:0;top:50%;width:30px;height:30px;background:#ccc;z-index:1;opacity:0.7;text-align:center;}
 
     </style>
-    <script src="../common.js" type="text/javascript"></script>
+    <script src="common.js" type="text/javascript"></script>
 </head>
 <body>
     <script type="text/javascript">
@@ -110,11 +110,10 @@
     </script>
     <div class="wrap">
         <ul>
-            <li><img src="img/1.jpg" alt="" /></li>
-            <li><img src="img/2.jpg" alt="" /></li>
-            <li><img src="img/3.jpg" alt="" /></li>
-            <li><img src="img/4.jpg" alt="" /></li>
-            <li><img src="img/5.jpg" alt="" /></li>
+            <li><img src="img/001.jpg" alt="" /></li>
+            <li><img src="img/002.jpg" alt="" /></li>
+            <li><img src="img/003.jpg" alt="" /></li>
+            <li><img src="img/004.jpg" alt="" /></li>
         </ul>
         <div class="left">&lt;</div>
         <div class="right">&gt;</div>
